# SDDE-model

./: .gitignore  README.md  environment.yml  pyproject.toml
src/sdde_model/: __init__.py  bootstrap.py  plot_sn.py  solar_dynamo.py
src/sdde_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
