[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdde-model"
version = "0.1.0"
description = "Shared Python bridge to the Julia SDDE solar dynamo model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.17",
  "juliacall",
  "matplotlib>=3.8",
]

[project.scripts]
plot-sn = "sdde_model.plot_sn:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
sdde_model = ["julia_env/Project.toml", "julia_env/Manifest.toml"]

[tool.setuptools.packages.find]
where = ["src"]
